# Durak-SFML

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
libs/: isNumber.h  str2int.h
src/: app.cpp  app.h  card.cpp  card.h  cards.cpp  cards.h  main.cpp  tcp.cpp  tcp.h  valid_input.h
src/rules/: card.cpp  card.h  cards.cpp  cards.h
src/server/: listener.h  sender.h  tcp.h
src/ui/: button.cpp  button.h  cardgrid.h  cardpack.cpp  cardpack.h  handstack.cpp  handstack.h  image_button.cpp  image_button.h
